fixed spacing on all pages.

--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -24,3 +24,8 @@
     }
   }
 }
+
+.intro-text {
+  margin-top: $spacing - 10px;
+  margin-bottom: $spacing;
+}
